# AI-assisted-Game-dev

./: .gitignore  CMakeLists.txt  README.md
src/: Game.cpp  Game.h  main.cpp
src/core/: Input.cpp  Input.h  Vector2.h
src/entities/: AmmoItem.h  Bullet.cpp  Bullet.h  Enemy.h  EnemyBullet.cpp  EnemyBullet.h  HealthItem.h  Item.h  Player.cpp  Player.h  Runner.cpp  Runner.h  Shooter.cpp  Shooter.h  SpikyWalker.cpp  SpikyWalker.h
src/gameplay/: Wavemanager.cpp  Wavemanager.h
src/render/: AnimationController.cpp  AnimationController.h  Renderer.cpp  Renderer.h
